# varnish-cache

./: Makefile.am  configure.ac
doc/sphinx/reference/: vcl_var.rst
include/: Makefile.am  vcli_serve.h  vipc.h
lib/libvarnish/: Makefile.am  vcli_serve.c  vipc.c
vext/: Makefile.am
vext/debug_persistent/: Makefile.am
